--- a/challenge-1/challenge-1.css
+++ b/challenge-1/challenge-1.css
@@ -1,16 +1,48 @@
 /*** CHALLENGE 1 STYLESHEET ***/
+/*** STYLE VARIABLES ***/
 :root {
-    --light-gray: #dadada;
-    --dark-gray: #333333;
+    --light-gray: #f5f5f5;
+    --dark-gray: #626262;
+    --header-font: 'Poppins', sans-serif;
 }
+/*** POST CONTAINER GENERAL STYLES ***/
 #posts-container {
-    max-width: 1420px;
+    /* Max Margin to cap off section so it's not too wide. Left commented in order to match reference image. */
+    /* max-width: 1420px; */
     margin: auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
     padding: 10px;
 }
+/*** POST CONTAINER GENERAL TEXT STYLES ***/
+#posts-container h3 {
+    color: var(--dark-gray);
+    margin-top: 5px;
+    font-family: var(--header-font);
+    line-height: 1.3em;
+    font-size: 1.2em;
+}
+/*** POST CONTAINER GENERAL IMAGE STYLES ***/
+#posts-container .post-item .post-image-wrap {
+    width: 100%;
+    padding-top: 56.25%;
+    position: relative;
+    overflow: hidden;
+}
+#posts-container .post-item .post-image-wrap img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+#posts-container .post-item img {
+    max-width: 100%;
+}
+
+/*** PRIMARY POST CONTAINER (1st COLUMN) STYLES ***/
 #posts-container #primary-posts-container {
     width: calc(50% - 20px);
     padding-right: 20px;
@@ -21,13 +53,12 @@
 #posts-container #primary-posts-container .post-item {
     width: calc(50% - 10px);
     background: var(--light-gray);
-    min-height: 260px;
     margin-right: 10px;
     margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 #posts-container #primary-posts-container .post-item:first-child{
     width: 100%;
-    min-height: 520px;
     margin-right: 0;
 }
 #posts-container #primary-posts-container .post-item:last-child{
@@ -52,6 +83,8 @@
     max-height: 300px;
     overflow: hidden;
 }
+
+/*** SECONDARY POST CONTAINER (2nd COLUMN) STYLES ***/
 #posts-container #secondary-posts-container {
     width: calc(25% - 20px);
     padding-right: 20px;
@@ -59,8 +92,12 @@
 #posts-container #secondary-posts-container .post-item {
     padding-bottom: 60px;
     border-bottom: 1px solid var(--light-gray);
-
 }
+#posts-container #secondary-posts-container .post-item:last-child {
+    border-bottom: none;
+}
+
+/*** TERTIARY POST CONTAINER (3rd COLUMN) STYLES ***/
 #posts-container #tertiary-posts-container {
     width: 25%;
 }
@@ -69,28 +106,9 @@
     margin-right: 10px;
     margin-bottom: 20px;
 }
-#posts-container #tertiary-posts-container .post-item .post-image-wrap {
-    width: 100%;
-    padding-top: 56.25%;
-    position: relative;
-    overflow: hidden;
-}
-#posts-container #tertiary-posts-container .post-item .post-image-wrap img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-#posts-container h3 {
-    color: var(--dark-gray);
-    margin-top: 5px;
-}
-#posts-container img {
-    max-width: 100%;
-}
 
+
+/*** RESPONSIVE STYLES ***/
 @media only screen and (max-width: 991px) {
     #posts-container #primary-posts-container, #posts-container #secondary-posts-container, #posts-container #tertiary-posts-container {
         width: 100%;
